# borderrover_firmware

./: .env  .gitignore  .gitmodules  .init_env  .localvimrc  .lvimrc  CMakeLists.txt  Makefile  docker-compose.yml  sdkconfig
.vim/: coc-settings.json
components/cxx_espnow/: CMakeLists.txt  cxx_espnow.cpp  cxx_espnow.hpp  cxx_espnow_message.cpp  cxx_espnow_message.hpp  cxx_espnow_peer.cpp  cxx_espnow_peer.hpp
components/cxx_utils/: CMakeLists.txt  util_event.hpp  util_lockable.hpp  util_misc.cpp  util_misc.hpp  util_queue.hpp  util_task.hpp  util_time.hpp  utils.hpp
components/hover_drive/: CMakeLists.txt  hover_drive.cpp  hover_drive.hpp
components/leds/: Adafruit_NeoPixel.cpp  Adafruit_NeoPixel.h  Arduino.h  CMakeLists.txt  NeoPixelAnimator.h  NeoPixelBrightnessBus.h  NeoPixelBus.h  leds.cpp  leds.hpp
components/nlohmann_json/: CMakeLists.txt
components/ota_server/: CMakeLists.txt  ota_server.c  ota_server.h
components/rover_body/: CMakeLists.txt  body_control.cpp  body_control.hpp  body_control_console.cpp  body_control_message.cpp  body_control_message.hpp  gpio_io.hpp
components/rover_drive/: CMakeLists.txt  app.cpp  app.hpp  motion_control.cpp  motion_control_monitor.cpp  motion_control_monitor.hpp
components/sys_console/: CMakeLists.txt  cmd_nvs.c  cmd_nvs.h  cmd_system.c  cmd_system.h  sys_console.c  sys_console.h
components/sys_core/: AbstractControl.cpp  AbstractControl.hpp  CMakeLists.txt  config.h  core_config.hpp  core_control_types.hpp  core_controls.cpp  core_controls.hpp  core_gpio.hpp  core_http.cpp  core_http.hpp  core_messages.hpp  core_status_led.cpp  core_status_led.hpp  core_ui.c  sys_core.cpp  sys_core.hpp  utils.h
components/uart_tcp_server/: CMakeLists.txt  uart_tcp_server.c
components/vesc/: CMakeLists.txt  buffer.h  component.mk  crc.h  packet.c  packet.h  vesc.cpp  vesc.hpp  vesc_forward_can.cpp  vesc_uart.cpp
components/wifi/: CMakeLists.txt  wifi.c  wifi.h
main/: CMakeLists.txt  app.cpp  app.h  app.hpp  common.h  main.c  motion_control.cpp  motion_control.hpp  motion_control_monitor.cpp  motion_control_monitor.hpp  task.hpp  uart_tcp_server.c  uart_tcp_server.h  ui.c  ui.h
main/www/: index.html
projects/rover_body/: CMakeLists.txt  Makefile
projects/rover_body/main/: CMakeLists.txt  main.cpp
projects/rover_drive/: CMakeLists.txt  Makefile
projects/rover_drive/main/: CMakeLists.txt  main.cpp
projects/rover_joypad/: CMakeLists.txt  partitions.csv  sdkconfig  ui.cpp
projects/rover_joypad/main/: CMakeLists.txt  adc.cpp  adc.hpp  main.cpp
projects/rover_remote/: CMakeLists.txt  Makefile  sdkconfig
projects/rover_remote/main/: CMakeLists.txt  component.mk  main.cpp
